# cpp-showcase

./: README.md
deter/: deter.cc  deter.h  deter_test.cc  err_output.txt  main.cc  random_data.txt  random_output.txt  real_big_input.txt  real_big_output.txt  real_input.txt  required_output.txt  wild_input.txt
lab2/: CMakeLists.txt  Makefile  ReadMe.md  err_input.txt  generate_matrix.py  real_output.txt  test_data.h  wild_output.txt
lab2/.cache/clangd/index/: deter.cc.A2BB5468552AE3B6.idx  deter.h.88AE540357AFF9D9.idx  deter_test.cc.CAFE5345FFD8C571.idx  main.cc.57D5DDCBE7800FD4.idx  test_data.h.7ED73132ED3713B2.idx
rtree/: CMakeLists.txt  ReadMe.md  ReadMe.txt  compile_commands.json  main.cc  rational.cc  rational.h  rtree.cc  rtree.h  rtree_test.cc
rtree/test_input/: chip_4-1.args.txt  chip_4-3.args.txt  chip_4.3-1.args.txt  chip_4.4-4.args.txt  divide_4.18.args.txt  divide_4.5.args.txt  divide_4.7.args.txt
rtree/test_output/: chip_4-1.output.txt  chip_4-3.output.txt  chip_4.3-1.output.txt  chip_4.4-4.output.txt  divide_4.18.output.txt  divide_4.5.output.txt  divide_4.7.output.txt
scorp/: CMakeLists.txt  ReadMe.md  board.cc  board.h  card.h  deck.cc  deck.h  err_invalid_char_input.txt  err_multiline.txt  err_num_cards_input.txt  main.cc  metrics_for_10_completion_test_runs.txt  player.cc  player.h  results.txt  results_for_3_runs.txt  results_looking_for_complete.txt  results_looking_for_complete_256.txt  scorp.cc  scorp.h  scorp_test.cc
